Refactor ProdutoService to replace Collectors.toList() with Stream.toList()